
0.83  2007-05-22
    - Big version jump to move version past badly formatted version in
      Cookie, Util.

1.0  2007-05-24
   - Another big version jump. I think we're about ready for 1.0.
   - Fixed skip count under Win32 in t/40.request.t [27257]. Thanks to
     ISHIGAKI for the patch.

1.1  2007-07-13
   - Added support for Set-Cookie as per CGI.pm patch 15065. Thanks to
     Patrick M. Jordan for the suggestion.

1.1.1   2007-07-31
      - Removed nasty global trap of __DIE__ in CGI::Standard. Thanks to
        Jeremy Morton for reporting it.

1.1.2   2007-07-31
      - Fixed module names in POD for CGI::Simple::Cookie,
        CGI::Simple::Util [#27597]. Thanks to BRICAS for reporting it.

1.103   2007-07-31
      - Version number chaos continues. One tends to forget that there
        is a strange universe in which 1.1 > 1.1.2.

1.104   2008-05-13
      - Switched from sysread to read. Fixes #35844: sysread used in
        CGI::Simple blocks on re-directed STDIO reads. Thanks to
        Damjan Pelemis.

1.105   2008-05-16
      - Fixed skip count in t/040.request.t. Fixes #35945. Thanks
        to snaury.

1.106   2008-09-14
      - Added missing Apache2 modules. Refs #39146 and #38931. Thanks
        to RSAVAGE.
      - Applied BEROV's patch for UTF-8 form data handling. Refs #12481.
        Thanks to BEROV.

1.107   2009-03-07
      - CGI::Simple::Cookie, fixed bug when cookie had both leading and
        trailing white space (RT#34314, Ron Savage and Mark Stosberg)
      - Accept a comma as well as semi-colon as a cookie separator. This
        is consistent with CGI.pm as well as RFC 2965, which states: "A
        server SHOULD also accept comma (,) as the separator between cookie-
        values for future compatibility." (Mark Stosberg)
      - Support cookies which have an equals sign in the value. Ported
        from CGI.pm (Mark Stosberg)
      - Support cookies in which one of multiple values is empty. Ported
        from CGI.pm (Mark Stosberg)